# ishmael

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Ishmael.cpp  Ishmael.hpp  README.md  THIRD-PARTY.md
commands/: ICommands.cpp  ICommands.hpp
commands/moderation/: mod_utils.cpp  mod_utils.hpp  moderation_utils.cpp  moderation_utils.hpp
commands/moderation/role_edits/: role_add.cpp
commands/utility/: ping.cpp  stats.cpp
include/: pch.hpp
logger/: logger.cpp  logger.hpp
secrets/: get_secret_input.cpp  get_secret_input.hpp  secrets.cpp
utilities/: utilities.cpp  utilities.hpp
utilities/console_utils/: console_utils.cpp  console_utils.hpp
utilities/exception/: exception.hpp
utilities/logger/: logger.cpp  logger.hpp
utilities/other_utils/: other_utils.cpp  other_utils.hpp
utilities/secrets/: get_secret_input.cpp  get_secret_input.hpp  secrets.cpp  secrets.hpp
